--- a/src/ui/marketing_home.html
+++ b/src/ui/marketing_home.html
@@ -4,234 +4,378 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>AgentHub | Trusted Agent Infrastructure</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Syne:wght@500;700;800&family=Manrope:wght@400;500;600;700&family=IBM+Plex+Mono:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <style>
       :root {
-        --bg-night: #06111d;
-        --bg-ocean: #0c2f46;
-        --bg-sky: #1f5f86;
-        --surface: rgba(248, 250, 252, 0.94);
-        --surface-dark: rgba(10, 24, 38, 0.72);
-        --ink: #102a43;
-        --muted: #486581;
-        --accent: #ff7b00;
-        --accent-alt: #0ea5e9;
-        --ok: #0f766e;
+        --bg: #f4efe6;
+        --ink: #152232;
+        --ink-soft: #37516d;
+        --line: rgba(21, 34, 50, 0.18);
+        --surface: rgba(255, 255, 255, 0.8);
+        --surface-strong: rgba(255, 255, 255, 0.94);
+        --hero: #fffaf2;
+        --brand: #e25e2a;
+        --brand-dark: #a83f18;
+        --sea: #0b758f;
+        --mint: #d5f2e9;
+        --mono: "IBM Plex Mono", "SFMono-Regular", Menlo, monospace;
       }
 
       * {
         box-sizing: border-box;
       }
 
+      @keyframes fade-up {
+        from {
+          opacity: 0;
+          transform: translateY(16px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
       body {
         margin: 0;
         min-height: 100vh;
-        font-family: "IBM Plex Sans", "Segoe UI", sans-serif;
         color: var(--ink);
+        font-family: "Manrope", "Avenir Next", "Segoe UI", sans-serif;
         background:
-          radial-gradient(circle at 12% 10%, rgba(255, 123, 0, 0.24) 0%, transparent 30%),
-          radial-gradient(circle at 88% 0%, rgba(14, 165, 233, 0.2) 0%, transparent 26%),
-          linear-gradient(160deg, var(--bg-night) 0%, var(--bg-ocean) 56%, var(--bg-sky) 100%);
+          radial-gradient(circle at 8% 8%, rgba(226, 94, 42, 0.16) 0%, transparent 33%),
+          radial-gradient(circle at 90% 0%, rgba(11, 117, 143, 0.2) 0%, transparent 35%),
+          linear-gradient(165deg, #efe6d8 0%, #f7f1e8 42%, #e9f0f3 100%);
+      }
+
+      body::before {
+        content: "";
+        position: fixed;
+        inset: 0;
+        pointer-events: none;
+        opacity: 0.26;
+        background-image:
+          linear-gradient(rgba(21, 34, 50, 0.03) 1px, transparent 1px),
+          linear-gradient(90deg, rgba(21, 34, 50, 0.03) 1px, transparent 1px);
+        background-size: 30px 30px;
       }
 
       .shell {
         max-width: 1160px;
         margin: 0 auto;
-        padding: 22px;
+        padding: 24px;
+        position: relative;
+        z-index: 1;
       }
 
-      .nav {
+      .topbar {
         display: flex;
-        justify-content: space-between;
         align-items: center;
-        margin-bottom: 20px;
+        justify-content: space-between;
+        gap: 12px;
+        padding: 10px 12px;
+        border-radius: 14px;
+        border: 1px solid var(--line);
+        background: rgba(255, 255, 255, 0.74);
+        box-shadow: 0 10px 24px rgba(23, 43, 66, 0.09);
+        animation: fade-up 0.45s ease-out both;
       }
 
       .brand {
-        color: #f8fafc;
         text-decoration: none;
-        font-family: "Space Grotesk", "IBM Plex Sans", sans-serif;
-        font-weight: 700;
-        letter-spacing: 0.03em;
+        color: var(--ink);
+        font-family: "Syne", "Avenir Next", sans-serif;
         font-size: 1.08rem;
+        font-weight: 800;
+        letter-spacing: 0.03em;
       }
 
       .nav-links {
         display: flex;
-        gap: 8px;
         flex-wrap: wrap;
+        gap: 8px;
       }
 
       .nav-links a {
         text-decoration: none;
-        color: #dbeafe;
-        border: 1px solid rgba(219, 234, 254, 0.28);
-        padding: 7px 11px;
+        color: var(--ink);
         border-radius: 999px;
-        font-size: 0.82rem;
+        border: 1px solid var(--line);
+        background: rgba(255, 255, 255, 0.82);
+        padding: 6px 12px;
+        font-weight: 700;
+        font-size: 0.78rem;
       }
 
       .hero {
+        margin-top: 16px;
         display: grid;
-        gap: 16px;
-        grid-template-columns: 1.1fr 0.9fr;
-        margin-bottom: 16px;
+        grid-template-columns: 1.08fr 0.92fr;
+        gap: 14px;
       }
 
-      .hero-copy {
-        background: var(--surface);
-        border-radius: 18px;
-        padding: 20px;
-        box-shadow: 0 16px 32px rgba(3, 12, 22, 0.26);
+      .hero-main,
+      .hero-side {
+        border-radius: 22px;
+        border: 1px solid var(--line);
+        animation: fade-up 0.5s ease-out both;
+      }
+
+      .hero-main {
+        background: var(--hero);
+        padding: 28px;
+        box-shadow: 0 26px 44px rgba(17, 30, 43, 0.13);
       }
 
       .eyebrow {
-        margin: 0 0 8px;
+        margin: 0;
         text-transform: uppercase;
-        letter-spacing: 0.06em;
-        font-size: 0.72rem;
+        letter-spacing: 0.11em;
         font-weight: 700;
-        color: var(--muted);
+        font-size: 0.72rem;
+        color: var(--ink-soft);
       }
 
       h1 {
-        margin: 0 0 10px;
-        font-family: "Space Grotesk", "IBM Plex Sans", sans-serif;
-        font-size: clamp(2rem, 5vw, 3rem);
-        line-height: 1.05;
+        margin: 12px 0;
+        font-family: "Syne", "Avenir Next", sans-serif;
+        font-weight: 800;
+        font-size: clamp(2.1rem, 4.4vw, 3.35rem);
+        line-height: 1.02;
+        max-width: 14ch;
       }
 
       .lead {
         margin: 0;
-        color: var(--muted);
-        font-size: 1rem;
-        line-height: 1.45;
+        max-width: 55ch;
+        font-size: 1.02rem;
+        line-height: 1.52;
+        color: var(--ink-soft);
       }
 
       .hero-actions {
-        margin-top: 16px;
+        margin-top: 20px;
         display: flex;
-        gap: 10px;
         flex-wrap: wrap;
+        gap: 10px;
       }
 
       .btn {
         text-decoration: none;
-        border-radius: 10px;
-        padding: 10px 13px;
-        font-weight: 700;
-        font-size: 0.9rem;
+        border-radius: 12px;
+        padding: 11px 15px;
+        font-weight: 800;
+        font-size: 0.88rem;
       }
 
       .btn-primary {
         color: #fff;
-        background: linear-gradient(120deg, #ef5b0c, var(--accent));
+        background: linear-gradient(140deg, var(--brand-dark) 0%, var(--brand) 48%, #f08a48 100%);
+        box-shadow: 0 10px 20px rgba(197, 78, 33, 0.26);
       }
 
       .btn-secondary {
-        color: #f0f9ff;
-        background: linear-gradient(120deg, #0f766e, var(--accent-alt));
+        color: #fff;
+        background: linear-gradient(140deg, #0b637a 0%, var(--sea) 55%, #17a4c5 100%);
+        box-shadow: 0 10px 20px rgba(8, 89, 110, 0.23);
       }
 
-      .hero-proof {
-        background: var(--surface-dark);
-        color: #e2e8f0;
-        border: 1px solid rgba(226, 232, 240, 0.16);
-        border-radius: 18px;
-        padding: 18px;
+      .pill-row {
+        margin-top: 16px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 8px;
       }
 
-      .hero-proof h2 {
-        margin: 0 0 8px;
-        font-size: 0.98rem;
+      .pill {
+        border-radius: 999px;
+        border: 1px solid rgba(21, 34, 50, 0.2);
+        background: #f7f3ec;
+        padding: 5px 10px;
+        font-size: 0.72rem;
+        font-weight: 700;
+        color: #29425d;
       }
 
-      .hero-proof ul {
+      .hero-side {
+        background: linear-gradient(170deg, rgba(14, 38, 59, 0.94) 0%, rgba(8, 77, 99, 0.9) 100%);
+        color: #eff8ff;
+        padding: 24px;
+        box-shadow: 0 24px 40px rgba(11, 30, 48, 0.24);
+        animation-delay: 0.1s;
+      }
+
+      .hero-side h2 {
+        margin: 0 0 10px;
+        font-family: "Syne", "Avenir Next", sans-serif;
+        font-size: 1.08rem;
+      }
+
+      .hero-side ul {
         margin: 0;
-        padding-left: 18px;
+        padding-left: 19px;
         display: grid;
-        gap: 6px;
-        font-size: 0.9rem;
+        gap: 7px;
+        color: #d4ecfb;
       }
 
-      .metrics {
-        margin-top: 14px;
+      .metric-row {
+        margin-top: 16px;
         display: grid;
         grid-template-columns: repeat(3, minmax(0, 1fr));
         gap: 8px;
       }
 
       .metric {
-        border-radius: 10px;
-        background: rgba(15, 118, 110, 0.16);
-        border: 1px solid rgba(153, 246, 228, 0.2);
-        padding: 8px;
+        border-radius: 12px;
+        border: 1px solid rgba(222, 242, 255, 0.22);
+        background: rgba(4, 31, 49, 0.62);
+        padding: 9px;
       }
 
       .metric strong {
         display: block;
-        font-size: 1.2rem;
-        color: #d1fae5;
+        font-family: "Syne", "Avenir Next", sans-serif;
+        font-size: 1.18rem;
+        color: #fff6ef;
       }
 
       .metric span {
-        font-size: 0.74rem;
-        color: #ccfbf1;
+        font-size: 0.72rem;
+        color: #c5dff0;
       }
 
-      .sections {
+      .section-grid {
+        margin-top: 14px;
         display: grid;
         gap: 12px;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
       }
 
-      .card {
-        background: var(--surface);
-        border-radius: 14px;
-        padding: 14px;
-        box-shadow: 0 10px 24px rgba(3, 12, 22, 0.2);
+      .section-card {
+        border: 1px solid var(--line);
+        background: var(--surface-strong);
+        border-radius: 18px;
+        padding: 18px;
+        box-shadow: 0 14px 26px rgba(16, 29, 42, 0.1);
+        animation: fade-up 0.56s ease-out both;
       }
 
-      .card h3 {
-        margin: 0 0 8px;
-        font-size: 1rem;
+      .section-card:nth-child(1) {
+        animation-delay: 0.04s;
       }
 
-      .card p {
+      .section-card:nth-child(2) {
+        animation-delay: 0.1s;
+      }
+
+      .section-card:nth-child(3) {
+        animation-delay: 0.16s;
+      }
+
+      .section-card h3 {
+        margin: 0 0 7px;
+        font-family: "Syne", "Avenir Next", sans-serif;
+        font-size: 1.03rem;
+      }
+
+      .section-card p {
         margin: 0;
-        color: var(--muted);
-        line-height: 1.4;
+        color: var(--ink-soft);
+        line-height: 1.47;
+      }
+
+      .workflow {
+        margin-top: 14px;
+        border-radius: 18px;
+        border: 1px solid var(--line);
+        background: linear-gradient(165deg, rgba(255, 252, 245, 0.95) 0%, rgba(234, 249, 246, 0.95) 100%);
+        padding: 18px;
+        box-shadow: 0 14px 24px rgba(18, 33, 48, 0.1);
+        animation: fade-up 0.62s ease-out both;
+        animation-delay: 0.22s;
+      }
+
+      .workflow h2 {
+        margin: 0 0 10px;
+        font-family: "Syne", "Avenir Next", sans-serif;
+        font-size: 1.04rem;
+      }
+
+      .workflow ol {
+        margin: 0;
+        padding-left: 20px;
+        color: var(--ink-soft);
+      }
+
+      .workflow li {
+        margin-bottom: 9px;
+      }
+
+      .workflow code {
+        font-family: var(--mono);
+        font-size: 0.82em;
+        border-radius: 6px;
+        background: #ecf5f8;
+        border: 1px solid rgba(10, 76, 93, 0.24);
+        color: #124760;
+        padding: 1px 6px;
       }
 
       footer {
-        margin-top: 14px;
-        color: #dbeafe;
-        font-size: 0.8rem;
+        margin-top: 12px;
+        color: #3b5773;
+        font-size: 0.81rem;
       }
 
-      @media (max-width: 860px) {
+      @media (max-width: 940px) {
         .hero {
           grid-template-columns: 1fr;
         }
 
-        .metrics {
-          grid-template-columns: 1fr 1fr;
+        .metric-row {
+          grid-template-columns: repeat(2, minmax(0, 1fr));
         }
       }
 
-      @media (max-width: 560px) {
+      @media (max-width: 640px) {
         .shell {
           padding: 14px;
         }
 
-        .metrics {
+        .hero-main,
+        .hero-side,
+        .workflow {
+          padding: 16px;
+        }
+
+        .topbar {
+          flex-direction: column;
+          align-items: flex-start;
+        }
+
+        .metric-row {
           grid-template-columns: 1fr;
+        }
+      }
+
+      @media (prefers-reduced-motion: reduce) {
+        *,
+        *::before,
+        *::after {
+          animation: none !important;
+          transition: none !important;
         }
       }
     </style>
   </head>
   <body>
     <main class="shell">
-      <nav class="nav">
+      <nav class="topbar">
         <a href="/" class="brand">AgentHub</a>
         <div class="nav-links">
           <a href="/docs">API Docs</a>
@@ -241,58 +385,73 @@
       </nav>
 
       <section class="hero">
-        <article class="hero-copy">
+        <article class="hero-main">
           <p class="eyebrow">Agent Runtime + DevHub</p>
           <h1>Build, Trust, and Run Autonomous Agents with Confidence</h1>
           <p class="lead">
-            AgentHub gives teams one place to publish agent capabilities, enforce policy guardrails, track cost/reliability,
-            and orchestrate delegation safely across domains.
+            AgentHub gives teams one place to publish agent capabilities, enforce policy guardrails, track
+            cost/reliability, and orchestrate delegation safely across domains.
           </p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="/operator">Open Operator Console</a>
             <a class="btn btn-secondary" href="/docs">Explore API</a>
           </div>
+          <div class="pill-row">
+            <span class="pill">Policy-first discovery</span>
+            <span class="pill">Replay-safe writes</span>
+            <span class="pill">Cost guardrails 80/100/120</span>
+          </div>
         </article>
-        <aside class="hero-proof">
+
+        <aside class="hero-side">
           <h2>What the platform emphasizes</h2>
           <ul>
             <li>Simple, composable workflows before complex autonomy.</li>
-            <li>Policy-first routing, explicit approvals, replay-safe writes.</li>
+            <li>Policy and trust constraints before semantic ranking.</li>
             <li>Evidence-backed operations with diagnostics and auditability.</li>
           </ul>
-          <div class="metrics">
+          <div class="metric-row">
             <div class="metric">
-              <strong>204</strong>
-              <span>pytest checks passing</span>
+              <strong>205</strong>
+              <span>pytest checks</span>
             </div>
             <div class="metric">
-              <strong>9</strong>
-              <span>Playwright flows passing</span>
+              <strong>11</strong>
+              <span>Playwright flows</span>
             </div>
             <div class="metric">
-              <strong>68</strong>
-              <span>segments completed</span>
+              <strong>69+</strong>
+              <span>delivery segments</span>
             </div>
           </div>
         </aside>
       </section>
 
-      <section class="sections">
-        <article class="card">
+      <section class="section-grid">
+        <article class="section-card">
           <h3>Agent DevHub</h3>
-          <p>Publish manifests, compare versions, track behavioral impact, and promote through review gates.</p>
+          <p>Publish manifests, compare versions, attach behavioral evidence, and promote safely through review gates.</p>
         </article>
-        <article class="card">
+        <article class="section-card">
           <h3>Runtime Exchange</h3>
-          <p>Discover capabilities, delegate with idempotency guarantees, and enforce budget + policy constraints.</p>
+          <p>Search capabilities, delegate with idempotency guarantees, and enforce budget plus trust policy constraints.</p>
         </article>
-        <article class="card">
-          <h3>Trust & Operations</h3>
-          <p>Use startup diagnostics, reliability overlays, and federation/compliance evidence to stay production-ready.</p>
+        <article class="section-card">
+          <h3>Trust and Operations</h3>
+          <p>Trace every decision path with startup diagnostics, policy overlays, and replay tooling for incident response.</p>
         </article>
       </section>
 
-      <footer>AgentHub is a reliability-first platform for interoperable autonomous systems.</footer>
+      <section class="workflow">
+        <h2>Reference workflow</h2>
+        <ol>
+          <li>Register capability contracts and strict schemas in <code>POST /v1/agents</code>.</li>
+          <li>Route work using policy-first search via <code>POST /v1/capabilities/search</code>.</li>
+          <li>Operate and triage with <code>/operator</code> timeline, replay, and diagnostics panels.</li>
+        </ol>
+      </section>
+
+      <footer>AgentHub is a reliability-first infrastructure layer for interoperable autonomous systems.</footer>
     </main>
   </body>
 </html>
